# rust_platformer

./: Cargo.toml
.cargo/: config.toml
src/: camera.rs  exit.rs  level.rs  main.rs  player.rs
src/player/: camera.rs  input.rs  movement.rs  state_machine.rs  visuals.rs
src/player/movement/: sub_components.rs
src/player/state_machine/: triggers.rs
