[package]
name = "platformer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1", features = ["dynamic_linking"] }
bevy_rapier2d = { version = "0.21.0", features = ["debug-render-2d"] }
bevy_editor_pls = "0.4.0"
seldom_state = "0.6.1"
leafwing-input-manager = "0.9.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
